examples/test/testpolicy19463.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19463
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key1: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value21
          key5: value20
          key0: value42
      podSelector:
        matchLabels:
          key10: value7
          key43: value29
          key25: value16
